完成样式编写

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat</title>
+    <link href="css/normalize.css" rel="stylesheet">
 </head>
 <body>
-    My Chat!
-    <div id="container">
-
-    </div>
+    <div id="container"></div>
     <script src="out/bundle.js"></script>
 </body>
 </html>
