登录之后用户名会展示在右侧用户列表

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link href="css/normalize.css" rel="stylesheet">
+<!--
+    <link href="css/main.css" rel="stylesheet">
+-->
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+<!--
+        <div class="chatApp">
+            <div class="chatMain">
+                &lt;!&ndash;<div class="targetArea">
+                    <img class="avatar" src="img/avatar.jpg"/>
+                    <div class="profile">
+                        <span>Morse</span>
+                    </div>
+                </div>&ndash;&gt;
+                <div class="flowArea">
+                </div>
+                <div class="newMsgArea">
+                    <form>
+                        <input type="text" class="editIpt"/>
+                        <button class="sendBtn">送出</button>
+                    </form>
+                </div>
+            </div>
+            <div class="memberListArea">
+            <ul>
+
+            </ul>
+        </div>
+        </div>
+-->
+    </div>
     <script src="out/bundle.js"></script>
 </body>
 </html>
