为发送的信息添加发送人的名称

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <div id="container">
-<!--
-        <div class="chatApp">
+      <!--  <div class="chatApp">
             <div class="chatMain">
                 &lt;!&ndash;<div class="targetArea">
                     <img class="avatar" src="img/avatar.jpg"/>
@@ -21,6 +20,14 @@
                     </div>
                 </div>&ndash;&gt;
                 <div class="flowArea">
+                    <div class="hasSend">
+                        <p class="from">Morse</p>
+                        <p class="msg">Test</p>
+                    </div>
+                    <div class="hasReceive">
+                        <p class="from">Morse</p>
+                        <p class="msg">Test</p>
+                    </div>
                 </div>
                 <div class="newMsgArea">
                     <form>
@@ -34,8 +41,7 @@
 
             </ul>
         </div>
-        </div>
--->
+        </div>-->
     </div>
     <script src="out/bundle.js"></script>
 </body>
